[tool.poetry]
name = "manim-utils"
version = "0.1.0"
description = "Utilities for Manim."
authors = ["PhotonicGluon <25820201+PhotonicGluon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

manim = "^0.18.1"
ordered-set = "^4.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
