[tool.poetry]
name = "manim-utils"
version = "0.1.0.dev5"
description = "Utilities for Manim."
authors = ["PhotonicGluon <25820201+PhotonicGluon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

manim = "^0.18.1"
ordered-set = "^4.1.0"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.3.0"
notebook = "^7.2.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
